[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/ScoreHolder.gd" type="Script" id=1]
[ext_resource path="res://feedback/ButtonJuice.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 184.0
margin_top = 99.0
margin_right = 937.0
margin_bottom = 527.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 163.0
margin_bottom = 374.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 163.0
margin_bottom = 14.0

[node name="position" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 155.0
margin_bottom = 14.0
text = "Your best time(this run):"

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 159.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 163.0
margin_bottom = 14.0

[node name="Score0" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 163.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score0"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score0"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score0"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score1" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 163.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score1"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score1"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score1"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 163.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score2"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score2"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score2"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 163.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score3"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score3"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score3"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 163.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score4"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score4"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score4"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score5" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 163.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score5"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score5"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score5"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score6" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 163.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score6"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score6"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score6"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score7" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 163.0
margin_bottom = 158.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score7"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score7"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score7"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score8" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 163.0
margin_bottom = 176.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score8"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score8"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score8"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score9" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 163.0
margin_bottom = 194.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score9"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score9"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score9"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score10" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 163.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score10"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score10"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score10"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score11" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 163.0
margin_bottom = 230.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score11"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score11"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score11"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score12" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 234.0
margin_right = 163.0
margin_bottom = 248.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score12"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score12"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score12"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score13" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 163.0
margin_bottom = 266.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score13"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score13"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score13"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score14" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 163.0
margin_bottom = 284.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score14"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score14"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score14"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score15" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 163.0
margin_bottom = 302.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score15"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score15"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score15"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score16" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 163.0
margin_bottom = 320.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score16"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score16"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score16"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score17" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 324.0
margin_right = 163.0
margin_bottom = 338.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score17"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score17"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score17"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score18" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 342.0
margin_right = 163.0
margin_bottom = 356.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score18"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score18"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score18"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Score19" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 163.0
margin_bottom = 374.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Score19"]
margin_bottom = 14.0

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Score19"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/Score19"]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 14.0

[node name="Button" type="Button" parent="."]
margin_left = 45.0
margin_top = 29.0
margin_right = 128.0
margin_bottom = 49.0
text = "Main Menu"
script = ExtResource( 2 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
